Bug 1614850 - Fixed a crash when enabling layers.progressive_paint on desktop and sandboxed platforms. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D107943