gfx/layers/apz/src/APZUtils.h
@@ -199,6 +199,12 @@ ScreenPoint ComputeFixedMarginsOffset(
 bool AboutToCheckerboard(const FrameMetrics& aPaintedMetrics,
                          const FrameMetrics& aCompositorMetrics);
 
+/**
+* Wrapper around StaticPrefs::layers_progressive_paint that takes into account
+* whether the platform is supported or sandboxed. We should prefer this over
+* using the StaticPrefs getter directly.
+*/
+bool ShouldUseProgressivePaint();
 }  // namespace apz
 
 }  // namespace layers
